--- a/code/ingestion_processing/requirements.txt
+++ b/code/ingestion_processing/requirements.txt
@@ -1,3 +1,5 @@
+jupyter
+ipykernel
 requests
 python-magic
 pandas
@@ -5,7 +7,6 @@ openpyxl
 numpy
 matplotlib
 seaborn
-ipykernel
 image
 pillow
 joblib
@@ -13,4 +14,4 @@ fasttext
 scikit-learn
 spacy[cuda]
 networkx
-https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.1.0/en_core_web_lg-3.1.0.tar.gz
+https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.2.0/en_core_web_lg-3.2.0.tar.gz
